CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(example_server)

SET(CMAKE_CXX_FLAGS "-g -Wall -DDEBUG")

INCLUDE_DIRECTORIES(
	include
	../include
)

AUX_SOURCE_DIRECTORY(src/ SRC_LIST)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../build)

ADD_EXECUTABLE(example_server.exe ${SRC_LIST})
TARGET_LINK_LIBRARIES(example_server.exe vas jsoncpp)
